--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         // LIFF Functions
         function orderFood() {
             // เปลี่ยนไปยังหน้าสั่งอาหารใหม่
-            window.location.href = "https://www.example.com/menu"; // เปลี่ยนลิงก์เป็น URL ที่แสดงอาหาร
+            window.location.href = "https://github.com/domejrh/liff1/path"; // เปลี่ยนลิงก์เป็น URL ที่แสดงอาหาร
         }
 
         function callWaiter() {
