--- a/path/index.html
+++ b/path/index.html
@@ -1,24 +1,202 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-  <title>Path</title>
-  <link rel="stylesheet" href="css/style.css" media="all">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Food Ordering</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .item {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+            .item h3 {
+                margin-bottom: 10px;
+            }
+
+        .quantity-controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+            .quantity-controls button {
+                padding: 10px;
+                font-size: 16px;
+                background-color: #4CAF50;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+
+            .quantity-controls span {
+                font-size: 18px;
+            }
+
+        .cart-icon {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px;
+            border-radius: 50%;
+            cursor: pointer;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            font-size: 18px;
+        }
+
+        .cart-count {
+            background-color: #ff0000;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 50%;
+            font-size: 14px;
+            position: absolute;
+            top: -10px;
+            right: -10px;
+        }
+
+        .cart-modal {
+            display: none;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        }
+
+            .cart-modal ul {
+                list-style-type: none;
+                padding: 0;
+            }
+
+            .cart-modal li {
+                padding: 10px 0;
+                border-bottom: 1px solid #ccc;
+            }
+    </style>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p id="param"><b>Query Param: </b></p>
-  <img id="pictureUrl">
-  <p id="userId"><b>userId:</b> </p>
-  <p id="displayName"><b>displayName:</b> </p>
-  <p id="statusMessage"><b>statusMessage:</b> </p>
-  <p id="decodedIDToken"><b>email:</b> </p>
-  <script>
-    // Query Params
-    const queryString = decodeURIComponent(window.location.search);
-    const params = new URLSearchParams(queryString);
-    document.getElementById("param").append(params.get("param"));
-  </script>
+
+    <div class="container">
+        <div class="item" data-id="1">
+            <h3>Pizza</h3>
+            <p>$10</p>
+            <div class="quantity-controls">
+                <button onclick="decreaseQuantity(1)">-</button>
+                <span id="quantity-1">0</span>
+                <button onclick="increaseQuantity(1)">+</button>
+            </div>
+        </div>
+        <div class="item" data-id="2">
+            <h3>Burger</h3>
+            <p>$8</p>
+            <div class="quantity-controls">
+                <button onclick="decreaseQuantity(2)">-</button>
+                <span id="quantity-2">0</span>
+                <button onclick="increaseQuantity(2)">+</button>
+            </div>
+        </div>
+        <!-- เพิ่มรายการอาหารเพิ่มเติมในรูปแบบเดียวกัน -->
+    </div>
+
+    <!-- ไอคอนตะกร้า -->
+    <div class="cart-icon" onclick="openCart()">
+        <span class="cart-count" id="cart-count">0</span>
+        🛒
+    </div>
+
+    <!-- Modal สำหรับแสดงรายการอาหารในตะกร้า -->
+    <div class="cart-modal" id="cart-modal">
+        <h3>รายการอาหารในตะกร้า</h3>
+        <ul id="cart-items">
+            <!-- รายการอาหารจะแสดงที่นี่ -->
+        </ul>
+        <button onclick="closeCart()">ปิด</button>
+    </div>
+
+    <script>
+        let cart = {};
+
+        // เพิ่มจำนวนอาหาร
+        function increaseQuantity(id) {
+            let quantity = document.getElementById(`quantity-${id}`);
+            let currentQuantity = parseInt(quantity.innerText);
+            currentQuantity++;
+            quantity.innerText = currentQuantity;
+            updateCart(id, currentQuantity);
+        }
+
+        // ลดจำนวนอาหาร
+        function decreaseQuantity(id) {
+            let quantity = document.getElementById(`quantity-${id}`);
+            let currentQuantity = parseInt(quantity.innerText);
+            if (currentQuantity > 0) {
+                currentQuantity--;
+                quantity.innerText = currentQuantity;
+                updateCart(id, currentQuantity);
+            }
+        }
+
+        // อัปเดตตะกร้า
+        function updateCart(id, quantity) {
+            if (quantity > 0) {
+                cart[id] = quantity;
+            } else {
+                delete cart[id];
+            }
+            updateCartIcon();
+        }
+
+        // อัปเดตจำนวนรายการในตะกร้า
+        function updateCartIcon() {
+            let totalItems = Object.values(cart).reduce((a, b) => a + b, 0);
+            document.getElementById("cart-count").innerText = totalItems;
+        }
+
+        // เปิดหน้าต่างตะกร้า
+        function openCart() {
+            let cartModal = document.getElementById("cart-modal");
+            let cartItemsList = document.getElementById("cart-items");
+            cartItemsList.innerHTML = '';
+
+            for (let id in cart) {
+                let itemName = document.querySelector(`.item[data-id='${id}'] h3`).innerText;
+                let quantity = cart[id];
+                let listItem = `<li>${itemName} x ${quantity}</li>`;
+                cartItemsList.innerHTML += listItem;
+            }
+
+            cartModal.style.display = 'block';
+        }
+
+        // ปิดหน้าต่างตะกร้า
+        function closeCart() {
+            document.getElementById("cart-modal").style.display = 'none';
+        }
+    </script>
+
 </body>
 </html>
