--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         // Initialize LIFF
         function initializeLiff() {
             liff.init({
-                liffId: "YOUR_LIFF_ID" // แทนที่ด้วย LIFF ID ของคุณ
+                liffId: "2006214422-Kz3Rr06Y" // แทนที่ด้วย LIFF ID ของคุณ
             }).then(() => {
                 console.log('LIFF initialized');
             }).catch(err => {
@@ -81,6 +81,33 @@
         function requestBill() {
             alert("กำลังเรียกเช็คบิล...");
         }
+
+        function submitOrder() {
+            const orderData = cart.map(item => ({
+                id: item.id,
+                quantity: item.quantity
+            }));
+
+            fetch('https://b513-171-96-192-110.ngrok-free.app', {  // ส่งข้อมูลไปยัง Backend
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    userId: liff.getProfile().userId,  // ส่ง user ID จาก LINE profile
+                    orderItems: orderData  // ส่งข้อมูลรายการอาหาร
+                })
+            }).then(response => {
+                if (response.ok) {
+                    alert("สั่งอาหารเรียบร้อยแล้ว");
+                } else {
+                    alert("เกิดข้อผิดพลาดในการสั่งอาหาร");
+                }
+            }).catch(error => {
+                console.error("Error:", error);
+            });
+        }
+
 
         // เริ่ม LIFF
         window.onload = function () {
