--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+//Line liff
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -88,7 +89,7 @@
                 quantity: item.quantity
             }));
 
-            fetch('https://b513-171-96-192-110.ngrok-free.app', {  // ส่งข้อมูลไปยัง Backend
+            fetch('http://127.0.0.1:5001/back-end-senior/us-central1/createOrder', {  // ส่งข้อมูลไปยัง Backend
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
