--- a/index.html
+++ b/index.html
@@ -1,122 +1,158 @@
-//Line liff
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Service</title>
+    <title>สั่งอาหาร</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+        }
+
+        .menu-item {
+            background-color: white;
+            width: 45%;
+            margin: 10px;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+            .menu-item h3 {
+                margin: 10px 0;
+            }
+
+        .quantity-control {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
+            margin-top: 10px;
         }
 
-        .container {
-            text-align: center;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-        }
-
-            .container h1 {
-                font-size: 24px;
-                margin-bottom: 20px;
+            .quantity-control button {
+                width: 30px;
+                height: 30px;
+                font-size: 18px;
+                margin: 0 10px;
             }
 
-        .button {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            margin: 10px 0;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
+        .cart {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
             background-color: #4CAF50;
             color: white;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             cursor: pointer;
-            transition: background-color 0.3s ease;
         }
 
-            .button:hover {
-                background-color: #45a049;
-            }
+        .cart-count {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background-color: red;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>บริการร้านอาหาร</h1>
-        <button class="button" onclick="orderFood()">สั่งอาหาร</button>
-        <button class="button" onclick="callWaiter()">เรียกพนักงาน</button>
-        <button class="button" onclick="requestBill()">เช็คบิล</button>
+    <div class="menu-container" id="menuContainer">
+        <!-- Items จะถูกเพิ่มจาก JavaScript -->
     </div>
 
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <div class="cart" onclick="viewCart()">
+        <span class="cart-count" id="cartCount">0</span>
+        🛒
+    </div>
+
     <script>
-        // Initialize LIFF
-        function initializeLiff() {
-            liff.init({
-                liffId: "2006214422-Kz3Rr06Y" // แทนที่ด้วย LIFF ID ของคุณ
-            }).then(() => {
-                console.log('LIFF initialized');
-            }).catch(err => {
-                console.error('LIFF initialization failed', err);
+        const menuItems = [
+            { id: 1, name: "อาหาร A", price: 100 },
+            { id: 2, name: "อาหาร B", price: 150 },
+            { id: 3, name: "อาหาร C", price: 120 },
+            { id: 4, name: "อาหาร D", price: 200 }
+        ];
+
+        let cart = [];
+
+        function renderMenu() {
+            const menuContainer = document.getElementById('menuContainer');
+            menuItems.forEach(item => {
+                const menuItem = document.createElement('div');
+                menuItem.classList.add('menu-item');
+                menuItem.innerHTML = `
+                        <h3>${item.name}</h3>
+                        <p>ราคา: ${item.price} บาท</p>
+                        <div class="quantity-control">
+                            <button onclick="decreaseQuantity(${item.id})">-</button>
+                            <span id="quantity-${item.id}">0</span>
+                            <button onclick="increaseQuantity(${item.id})">+</button>
+                        </div>
+                    `;
+                menuContainer.appendChild(menuItem);
             });
         }
 
-        // LIFF Functions
-        function orderFood() {
-            // เปลี่ยนไปยังหน้าสั่งอาหารใหม่
-            window.location.href = "https://domejrh.github.io/liff1/path/"; // เปลี่ยนลิงก์เป็น URL ที่แสดงอาหาร
+        function increaseQuantity(id) {
+            const item = cart.find(i => i.id === id);
+            if (item) {
+                item.quantity++;
+            } else {
+                const menuItem = menuItems.find(i => i.id === id);
+                cart.push({ ...menuItem, quantity: 1 });
+            }
+            document.getElementById(`quantity-${id}`).textContent = cart.find(i => i.id === id).quantity;
+            updateCartCount();
         }
 
-        function callWaiter() {
-            alert("กำลังเรียกพนักงาน...");
-        }
-
-        function requestBill() {
-            alert("กำลังเรียกเช็คบิล...");
-        }
-
-        function submitOrder() {
-            const orderData = cart.map(item => ({
-                id: item.id,
-                quantity: item.quantity
-            }));
-
-            fetch('http://127.0.0.1:5001/back-end-senior/us-central1/createOrder', {  // ส่งข้อมูลไปยัง Backend
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    userId: liff.getProfile().userId,  // ส่ง user ID จาก LINE profile
-                    orderItems: orderData  // ส่งข้อมูลรายการอาหาร
-                })
-            }).then(response => {
-                if (response.ok) {
-                    alert("สั่งอาหารเรียบร้อยแล้ว");
-                } else {
-                    alert("เกิดข้อผิดพลาดในการสั่งอาหาร");
+        function decreaseQuantity(id) {
+            const item = cart.find(i => i.id === id);
+            if (item && item.quantity > 0) {
+                item.quantity--;
+                document.getElementById(`quantity-${id}`).textContent = item.quantity;
+                if (item.quantity === 0) {
+                    cart = cart.filter(i => i.id !== id);
                 }
-            }).catch(error => {
-                console.error("Error:", error);
-            });
+                updateCartCount();
+            }
         }
 
+        function updateCartCount() {
+            const cartCount = cart.reduce((sum, item) => sum + item.quantity, 0);
+            document.getElementById('cartCount').textContent = cartCount;
+        }
 
-        // เริ่ม LIFF
-        window.onload = function () {
-            initializeLiff();
-        };
+        function viewCart() {
+            alert("คุณมีอาหารในตะกร้าดังนี้:\n" + cart.map(item => `${item.name}: ${item.quantity} ชิ้น`).join('\n'));
+        }
+
+        renderMenu();
     </script>
 </body>
 </html>
+
 
 
 
