--- a/path/index.html
+++ b/path/index.html
@@ -154,7 +154,7 @@
                 quantity: item.quantity
             }));
 
-            fetch('https://<YOUR_CLOUD_FUNCTION_URL>/createOrder', {
+            fetch('https://2770-171-96-204-194.ngrok-free.app/back-end-senior/us-central1/createOrder', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
